# almaz_bot

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yaml  main.py  mypy.ini  nginx.snippet  pyproject.toml  requirements.txt  run_tests.py
auth/: __init__.py
config/: __init__.py  load.py
deploy/: Dockerfile  docker-compose.yaml
logger/: __init__.py  configure.py  handlers.py
lombardis/: api.py  dto.py  schemas.py
repository/: clients.py  dto.py  users.py
src/: main.py
src/config/: __init__.py
src/logger/: __init__.py  configure.py
src/lombardis/: api.py  dto.py  protocols.py  schemas.py
src/repository/: dto.py  protocols.py  users.py
src/telegram/: bot.py  webhook.py
src/telegram/handlers/: __init__.py  helpers.py  loans.py  start.py  text_constants.py
src/tests/: conftest.py  test_lombardis.py
src/tests/fakes/: lombardis.py
telegram/: bot.py  handlers.py  helpers.py  text_constants.py  webhook.py
telegram/handlers/: __init__.py  commands_menu.py  handlers.py  helpers.py  loans.py  menu.py  payment.py  start.py  text_constants.py
tests/: test_lombardis.py
tests/fakes/: lombardis.py
