[project]
name = "almaz"
version = "0.1.0"
description = "Demo"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiofiles==24.1.0",
    "aiogram==3.20.0",
    "aiogram-calendar==0.6.0",
    "aiohappyeyeballs==2.6.1",
    "aiohttp==3.11.16",
    "aiosignal==1.3.2",
    "aiosqlite==0.21.0",
    "annotated-types==0.7.0",
    "attrs==25.3.0",
    "certifi==2025.1.31",
    "charset-normalizer==3.4.1",
    "deprecated==1.2.18",
    "executing==2.2.0",
    "frozenlist==1.5.0",
    "googleapis-common-protos==1.70.0",
    "idna==3.10",
    "importlib-metadata==8.6.1",
    "iniconfig==2.1.0",
    "logfire==3.14.0",
    "magic-filter==1.0.12",
    "markdown-it-py==3.0.0",
    "mdurl==0.1.2",
    "multidict==6.4.3",
    "opentelemetry-api==1.32.0",
    "opentelemetry-exporter-otlp-proto-common==1.32.0",
    "opentelemetry-exporter-otlp-proto-http==1.32.0",
    "opentelemetry-instrumentation==0.53b0",
    "opentelemetry-proto==1.32.0",
    "opentelemetry-sdk==1.32.0",
    "opentelemetry-semantic-conventions==0.53b0",
    "packaging==24.2",
    "pluggy==1.5.0",
    "propcache==0.3.1",
    "protobuf==5.29.4",
    "pydantic==2.11.3",
    "pydantic-core==2.33.1",
    "pygments==2.19.1",
    "requests==2.32.3",
    "rich==14.0.0",
    "ruff>=0.11.9",
    "typing-extensions==4.13.2",
    "typing-inspection==0.4.0",
    "urllib3==2.4.0",
    "wrapt==1.17.2",
    "yarl==1.19.0",
    "zipp==3.21.0",
]

[dependency-groups]
dev = [
    "dotenv>=0.9.9",
    "faker>=37.1.0",
    "mypy>=1.15.0",
    "mypy-extensions>=1.1.0",
    "polyfactory>=2.21.0",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.26.0",
    "python-dotenv>=1.1.0",
    "ruff>=0.11.9",
    "tzdata>=2025.2",
]
